maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:21: error: n is already defined as variable n
  var (s,n,o,e)=(false,false,false,false)
         ^ShortestPathMaze:23: error: type mismatch;
 found   : Int(1)
 required: String
                {setIndication(x,y+1,n+1);s=true}
                                       ^ShortestPathMaze:25: error: type mismatch;
 found   : Int(1)
 required: String
                {setIndication(x,y-1,n+1);n=true}
                                       ^ShortestPathMaze:27: error: type mismatch;
 found   : Int(1)
 required: String
                {setIndication(x-1,y,n+1);o=true}
                                       ^ShortestPathMaze:29: error: type mismatch;
 found   : Int(1)
 required: String
                {setIndication(x+1,y,n+1);e=true}             
                                       ^